<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_box"
        android:layout_margin="5dp"
        android:padding="10dp">
                
	    <TableRow android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:paddingBottom="3dp">
	        
		    <TextView 
                android:layout_height="fill_parent" 
                android:text="@string/in_label" 
                style="@style/MainFont"/>
		    <LinearLayout 
                android:background="@drawable/dashed_box"
                android:orientation="horizontal"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/in_layout">
                <ImageView 
                    android:layout_height="fill_parent"
                    style="@style/SideImage.Pencil" 
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"/>
                <TextView android:id="@+id/horario_entrada" 
                    style="@style/MainFont.Value" 
                    android:text="08:00" />
            </LinearLayout>
	    </TableRow>
	    
	    <TableRow android:orientation="horizontal"
	        android:layout_width="fill_parent"
            android:paddingBottom="3dp">
	        
		    <TextView 
                android:layout_height="fill_parent" 
                android:text="@string/out_label" 
                style="@style/MainFont"/>
		    <LinearLayout 
                android:background="@drawable/dashed_box"
                android:orientation="horizontal"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/out_layout">
                <ImageView 
                    android:layout_height="fill_parent"
                    style="@style/SideImage.Pencil" 
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"/>
			    <TextView android:id="@+id/horario_saida"
                    style="@style/MainFont.Value" 
                    android:text="17:00"/>
            </LinearLayout>
	    </TableRow>
	    	        
	    <TableRow android:orientation="horizontal"
	        android:layout_width="fill_parent"
            android:paddingBottom="3dp">
	        
	        <TextView
                android:layout_height="fill_parent" 
                android:text="@string/lunch_label" 
                style="@style/MainFont"/>
	        <LinearLayout 
                android:background="@drawable/dashed_box"
                android:orientation="horizontal"
                android:layout_height="fill_parent" 
	            android:layout_weight="1"
                android:id="@+id/lunch_layout">
			    <ImageView 
			        android:layout_height="fill_parent"
                    style="@style/SideImage.Pencil" 
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"/>
			    <TextView
	                android:id="@+id/almoco" 
	                style="@style/MainFont.Value"
	                android:text="1:00"/>
            </LinearLayout>
	    </TableRow>
	    
	    <TableRow
	        android:layout_width="fill_parent">
	        
	        <TextView 
                android:text="@string/total_label" 
                style="@style/MainFont"
                android:textStyle="bold"/>
		    <TextView android:id="@+id/total" 
                style="@style/MainFont.Value"
                android:paddingRight="5dp"
                android:text="08:00"/>
        </TableRow>
    </TableLayout>
    
    <Button 
        android:id="@+id/save_button" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:layout_margin="20dp"/>
</LinearLayout>
